fix SDK button spacing

--- a/production/src/Components/SDKButton.css
+++ b/production/src/Components/SDKButton.css
@@ -3,7 +3,7 @@
     height: 250px;
     border: 2px solid grey;
     background-color: white;
-    margin: 1fr;
+    margin: auto;
     margin-top: 20px;
 }
 
